tests/compile-fail/completion_mutable_reference.rs
use sml::sml;

struct Payload;

sml! {
        _ {
        *Idle + Go(&'a mut Payload) = Step,
        Step + completion<Go>(&'a mut Payload) = Done,
    }
}

fn main() {}
